--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-pika==0.10.0
-psutil==5.0.0
+future==0.18.3
+iso8601==2.1.0
+pika==1.3.2
+psutil==5.9.6
+pyserial==3.5
+PyYAML==6.0.1
+serial==0.0.97
